# RevolutionaryWayToServeUpReactApps

./: .dockerignore  .gitignore  AGENTS.md  BOOTSTRAP_FOLDER_REMOVAL.md  CONFLICTS_RESOLVED.md  CONFLICT_DETAILS.md  Dockerfile  LEGACY_FOLDERS_REMOVAL.md  MERGE_CONFLICT_RESOLUTION.md  NESTED_AGGREGATE_CLASSES_IMPLEMENTATION_COMPLETE.md  README-CONFLICTS.md  README-STRING-EXTRACTION.md  README.md  RESOLUTION_EXAMPLES.md  bootstrap.d.ts  bootstrap.js  codegen-data.json  codegen.js  config.json  conflict-analysis.json  docker-compose.yml  docstringscan.py  index.html  lint.ts  package.json  styles.scss  test-string-extractor.js  test-strings-extraction.js  test-strings.js
.github/: README.md  WORKFLOW_SETTINGS.md  ai-assisted-workflows.md  copilot-instructions.md
.string-extractor-backups/: extraction-report-2025-12-22T14-03-02-783Z.json  extraction-report-2025-12-22T14-04-18-236Z.json
agents/: AGENTS.md  README.md
bootstrap/: FACTORY_INTEGRATION.md  FACTORY_INTEGRATION_COMPLETE.md  NESTED_AGGREGATE_CLASSES_IMPLEMENTATION_COMPLETE.md  base-bootstrap-app.js  bootstrap-app.d.ts  bootstrap-app.js  bootstrapper.js  config-loader.js  demo-nested-aggregates.js  env-service.js  env.js  import-map-init.js  local-loader.js  local-module-loader.js  local-paths.js  logging-manager.js  module-loader-service.js  module-loader.js  network.js  script-list-loader-service.js  script-list-loader.js  script-list.html  source-utils.js  tsx-compiler.js
bun/: package-lock.json  package.json
ci/: package.json
codegen/: README.md  eslint.config.js  lint.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
docs/: INTERFACE_COMPLIANCE_REPORT.md  INTERFACE_IMPLEMENTATION_GUIDE.md  api-reference.md  digital-twin.md  workspace-tour.md
docs-viewer/: README.md  package.json
e2e/: Dockerfile  README.md  eslint.config.js  package.json  playwright.config.ts  run-e2e.js  server.js
plugins/: api-stubs.plugin.js  coverage-report.plugin.js  oop-principles.plugin.js  test-runner.plugin.js
python/: bun_wrapper.py  copy_sources.py  pyproject.toml
python/gh-actions-local-docker/: README.md  pyproject.toml  run_tests.py
python/gh-actions-local-docker/src/: run_actions_local.py
python/gh-actions-local-docker/tests/: test_build_command.py
python/rwtra_scripts/: actions_runner.py  copy_sources.py
retro-react-app/: .eslintrc.json  .prettierrc  eslint.config.js  eslint.config.mjs  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json
runtime-retro-app/: play.css  (+9 more)
(+1375 files in other folders)
