[project]
name = "gh-actions-local-docker"
version = "0.1.0"
requires-python = ">=3.10"
description = "Run GitHub Actions workflows locally via Docker using nektos/act"
authors = [{name="WardCrew"}]
readme = "README.md"
license = {text = "MIT"}

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
