[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gh-actions-local-docker"
version = "0.1.0"
description = "Run GitHub Actions workflows locally via Docker using nektos/act"
authors = ["WardCrew"]
readme = "README.md"
license = "MIT"

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.scripts]
gh-actions-local-docker = "src.run_actions_local:main"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
